--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "butcher"
 version = "0.1.0"
-authors = ["Sasha <leo.pourcelot@protonmail.com>"]
+authors = ["Sasha <sasha.pourcelot@protonmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
