--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,12 @@ name = "butcher"
 version = "0.1.0"
 authors = ["Sasha <sasha.pourcelot@protonmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+description = "An easy way to interact with structs and enums wrapped in Cows"
+repository = "https://github.com/scileo/butcher"
+documentation = "https://docs.rs/butcher"
+readme = "README.md"
+categories = []
+keywords = ["rust-patterns"]
 
 [dependencies]
