--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,6 @@ jobs:
       matrix:
         rust:
           - stable
-          - beta
-          - nightly
           - 1.39.0
     steps:
       - uses: actions/checkout@v1
@@ -61,23 +59,10 @@ jobs:
         with:
           command: test
           args: --no-default-features
-
-  test-os:
-    name: Test Suite
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --manifest-path butcher_proc_macro/Cargo.toml
 
   fmt:
     name: Rustfmt
