--- a/butcher_proc_macro/Cargo.toml
+++ b/butcher_proc_macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "butcher_derive"
+name = "butcher_proc_macro"
 version = "0.1.0"
 authors = ["Sasha <sasha.pourcelot@protonmail.com>"]
 edition = "2018"
