Start working on butcher_core
This crate will contain every trait which will be derived in butcher_proc_macro.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ keywords = ["rust-patterns"]
 
 [dependencies]
 butcher_proc_macro = { path = "butcher_proc_macro" }
+butcher_core = { path = "butcher_core" }
