--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,10 @@ jobs:
         with:
           command: test
           args: --manifest-path butcher_proc_macro/Cargo.toml
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --manifest-path butcher_core/Cargo.toml
 
   fmt:
     name: Rustfmt
