Removes butcher_core, so that there are only two crates in the workspace
This way, publishing new version will be easier.
Also, the 0.2.0 release has been tagged.

--- a/butcher_proc_macro/Cargo.toml
+++ b/butcher_proc_macro/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
 name = "butcher_proc_macro"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Sasha <sasha.pourcelot@protonmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+description = "Procedural macros for butcher"
+repository = "https://github.com/scileo/butcher"
+documentation = "https://docs.rs/butcher"
+readme = "README.md"
+categories = []
+keywords = ["rust-patterns"]
+
 
 [lib]
 proc-macro = true
