--- a/butcher/Cargo.toml
+++ b/butcher/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "butcher"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Sasha <sasha.pourcelot@protonmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -12,6 +12,5 @@ categories = []
 keywords = ["rust-patterns"]
 
 [dependencies]
-butcher_proc_macro = { path = "../butcher_proc_macro" }
-butcher_core = { path = "../butcher_core" }
+butcher_proc_macro = { version = "0.2", path = "../butcher_proc_macro" }
 
