--- a/butcher/Cargo.toml
+++ b/butcher/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 description = "An easy way to interact with structs and enums wrapped in Cows"
 repository = "https://github.com/scileo/butcher"
 documentation = "https://docs.rs/butcher"
-readme = "README.md"
+readme = "../README.md"
 categories = []
 keywords = ["rust-patterns"]
 
