--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - beta
+          - stable
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: beta
+          toolchain: stable
           override: true
       - uses: actions-rs/cargo@v1
         with:
@@ -43,7 +43,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - beta
+          - stable
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
@@ -61,7 +61,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - beta
+          - stable
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
@@ -80,7 +80,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - beta
+          - stable
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
